grammar.js
    tsql_file: $ => choice(
      repeat($.batch)
      ,seq($.execute_body_batch, repeat($.go_statement))
    ),

    batch: $ => choice(
      prec(1,$.go_statement)
      ,seq(optional($.execute_body_batch),choice($.go_statement, repeat1($.sql_clauses)), repeat($.go_statement))
      ,//TODO seq($.batch_level_statement, repeat($.go_statement))
       //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L46-L51
    ),

    // Comments
    // Single-line: -- until end of line
    // Multi-line:  /* ... */
    sql_clauses: $ => prec.right(choice(
      seq($.dml_clause, optional(SEMI))
      ,seq($.cfl_statement, optional(SEMI))
      ,seq($.ddl_clause, optional(SEMI))
      ,seq($.another_statement, optional(SEMI))
      //TODO https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L53-L61
    )),

    // =====================
    // DDL
    // =====================

    dml_clause: $ => choice(
      $.select_statement_standalone
      ,$.insert_statement
      ,$.update_statement
      ,$.delete_statement
      ,$.merge_statement
      //TODO https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L63-L70
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L2161
    select_statement_standalone: $ => seq(
      optional($.with_expression),
      $.select_statement
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L3955
    select_statement: $ => prec.left(seq(
      $.query_expression
      ,optional($.select_order_by_clause)
      ,optional($.for_clause)
      ,optional($.option_clause)
      ,optional(SEMI)
    )),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4055-L4068
    query_expression: $ => prec.left(seq(
      $.query_specification, repeat($.sql_union)
      //TODO parenthesized query_expression https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L3999
    )),

    query_specification: $ => prec.right(seq(
      $.select
      ,optional(choice(token(/ALL/i), token(/DISTINCT/i)))
      ,optional($.top_clause)
      ,$.select_list
      ,optional(seq(token(/INTO/i), $.full_table_name))
      ,optional($._query_from_clause)
      //TODO https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4010-L4023
    )),

    // Hidden sub-rule: breaks 7-optional cross-product into 4 × 3 (FROM is anchor)
    _query_from_clause: $ => prec.right(seq(
      token(/FROM/i), $.table_sources
      ,optional(seq(token(/WHERE/i), $.search_condition))
      ,optional($.groupby)
      ,optional(seq(token(/HAVING/i), $.search_condition))
    )),

    select: $ => token(/SELECT/i),
    //https://learn.microsoft.com/en-us/sql/t-sql/queries/select-clause-transact-sql?view=sql-server-ver16&redirectedfrom=MSDN
    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4119
    select_list: $ => seq($.select_list_elem, repeat(seq(token(','), $.select_list_elem))),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4143-L4148
    select_list_elem: $ => choice(
      $.asterisk
      ,seq(field('table', $.id_), DOT, $.asterisk)  // qualified asterisk: table.*
      ,$.udt_elem
      ,seq($.LOCAL_ID_, choice($.assignment_operator, token('=')), $.expression)
      ,$.expression_elem
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4018
    expression_elem: $ => prec.right(choice(
      seq(field('leftAlias', $.column_alias), token(/=/), field('leftAssignment', $.expression))
      ,seq(field('expressionAs', $.expression), optional($.as_column_alias))
    )),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4910
    table_sources: $ => seq(
      $.table_source, repeat(seq(token(','), $.table_source))
      //TODO https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4150-L4153
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4160C4-L4163
    table_source: $ => seq($.table_source_item, repeat($.join_part)),

    table_source_item: $ => seq(
      choice(
        $.open_json             // OPENJSON (handles own alias)
        ,$.open_xml             // OPENXML (handles own alias)
        ,$.rowset_function      // OPENROWSET
        ,$.openquery            // OPENQUERY
        ,$.opendatasource       // OPENDATASOURCE
        ,$.change_table         // CHANGETABLE
        ,$.nodes_method         // XML .nodes() method
        ,$.table_valued_function  // must be before full_table_name (both start with id_)
        ,$.full_table_name
        ,seq(token('('), $.select_statement, token(')'))  // derived table
        ,$.local_id_
      )
      ,choice(
        $.pivot_clause          // PIVOT path (includes its own alias)
        ,$.unpivot_clause       // UNPIVOT path (includes its own alias)
        ,seq(optional($.as_table_alias), optional($.tablesample), optional($.with_table_hints))  // normal path
      )
    ),

    // OPENJSON — https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4190
    full_table_name: $ => prec.right(seq(
      optional(choice(
      //NOTE? whats this dotdot example https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L5118
        seq(field('server', $.id_), DOT, field('database', $.id_), DOT, field('schema', $.id_), DOT)
        ,seq(field('database', $.id_), DOT, field('schema', $.id_), DOT)
        ,seq(field('schema', $.id_), DOT)
      ))
      ,field('table', $.id_)
    )),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L5155-L5160
    full_column_name: $ => prec.right(seq(
      optional(choice(
        seq(field('server', $.id_), DOT, field('schema', $.id_), DOT, field('table', $.id_), DOT)
        ,seq(field('schema', $.id_), DOT, field('table', $.id_), DOT)
        ,seq(field('table', $.id_), DOT)
        ,seq(token(/DELETED/i), DOT)
        ,seq(token(/INSERTED/i), DOT)
      ))
      ,field('column', $.id_)
    )),

    //TODO CORPUS
    expression: $ => choice(
      $.primitive_expression
      ,$.full_column_name
      ,$.function_call
      ,$.bracket_expression
      ,$.case_expression
      ,$.unary_operator_expression
      // Multiplicative: * / %
      ,prec.left(5, seq($.expression, $.asterisk, $.expression))
      ,prec.left(5, seq($.expression, token('/'), $.expression))
      ,prec.left(5, seq($.expression, token('%'), $.expression))
      // Additive: + -
      ,prec.left(4, seq($.expression, $.PLUS, $.expression))
      ,prec.left(4, seq($.expression, token('-'), $.expression))
      // Bitwise: & ^ | ||
      ,prec.left(3, seq($.expression, token('&'), $.expression))
      ,prec.left(3, seq($.expression, token('^'), $.expression))
      ,prec.left(3, seq($.expression, token('|'), $.expression))
      ,prec.left(3, seq($.expression, token('||'), $.expression))
      // COLLATE
      ,prec.left(7, seq($.expression, $.collation_))
      // AT TIME ZONE
      ,prec.left(7, seq($.expression, $.AT_KEYWORD, token(/TIME/i), token(/ZONE/i), $.expression))
      // XML methods: .value() .query() .exist() .modify()
      ,prec.left(8, seq($.expression, DOT, choice($.value_call, $.query_call, $.exist_call, $.modify_call)))
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L3945
    bracket_expression: $ => choice(
      seq(token('('), $.expression, token(')'))
      ,seq(token('('), $.subquery, token(')'))
    ),

    subquery: $ => $.select_statement,

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L3940
    function_call: $ => choice(
      $.ranking_windowed_function
      ,$.aggregate_functions
      ,$.analytic_windowed_functions

      ,$.built_in_functions
      //TODO built_in_function ~~200 rules https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4291

      ,$.iif_function
      ,$.coalesce_function
      ,$.nullif_function

      ,choice(
        seq($.scalar_function_name, parens(optional($.expression_list_)))
        ,seq(choice($.binary_checksum_, $.checksum_), parens(choice($.asterisk, $.expression_list_))) //TODO MOVE TO BUILTINS
      )

      ,$.partition_function
      //TODO https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4287
      ,$.hierarchyid_static_method
      //TODO freetext_function
      ,$.odbc_scalar_functions
      ,$.bit_manipulation_functions
      ,$.collation_functions
      ,$.configuration_functions
      ,$.conversion_functions
      ,$.cursor_functions
      ,$.datatype_functions
      ,$.datetime_functions
      ,$.json_functions
      ,$.logical_functions
      ,$.math_functions
      ,$.security_functions
      ,$.string_functions
      ,$.system_functions
    ),

    // IIF(search_condition, true_val, false_val) — first arg is search_condition
    primitive_expression: $ => choice(
      $.default
      ,$.null_
      ,$.LOCAL_ID_
      ,$.primitive_constant
      ,$.dollar_action_
    ),

    primitive_constant: $ => choice(
      $.string_lit
      ,$.binary
      ,$.real_
      ,$.decimal_
      ,$.float_
      ,$.money_
      ,$.parameter_
    ),

    decimal_: $ => DECIMAL,

    //
    // HELPERS
    //

    // Word token for keyword extraction optimization
    // This must match the identifier pattern so tree-sitter can extract keywords
    _word: $ => /[A-Za-z_#][A-Za-z_#$@0-9]*/,

    //https://msdn.microsoft.com/en-us/library/ms175874.aspx
    id_: $ => choice(
      $._word
      ,$.TEMP_ID_
      ,SQUARE_BRACKET_ID
      ,DOUBLE_QUOTE_ID
      ,$._keyword
      //TODO https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L6261
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L5287
    // Keywords that can be used as identifiers (column names, table names, aliases)
    // Excludes statement/clause-starting keywords (SELECT, FROM, WHERE, etc.) to avoid state explosion
    _keyword: $ => prec(-1, choice(
      token(/VALUE/i), token(/QUERY/i), token(/EXIST/i), token(/MODIFY/i), token(/NODES/i)
      ,token(/INT/i), token(/DATE/i), token(/TIME/i), token(/TEXT/i), token(/XML/i)
      ,token(/BIT/i), token(/FLOAT/i), token(/REAL/i), token(/CHAR/i), token(/IMAGE/i)
      ,token(/NAME/i), token(/TYPE/i), token(/KEY/i), token(/LEVEL/i)
      ,token(/INDEX/i), token(/TABLE/i), token(/VIEW/i), token(/SCHEMA/i)
      ,token(/ROLE/i), token(/USER/i), token(/FILE/i), token(/PATH/i)
      ,token(/DEFAULT/i), token(/NULL/i), token(/SOURCE/i), token(/TARGET/i)
      ,token(/VERSION/i), token(/OWNER/i), token(/JSON/i), token(/GO/i)
    )),
