test/corpus/bracket_expression.txt
==================
Bracket Expression Parenthesized
==================

SELECT (foo)

---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (bracket_expression
                          (expression
                            (full_column_name
                              (id_))))))))))))))))

==================
Bracket Expression Nested
==================

SELECT ((1 + 2))

---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (bracket_expression
                          (expression
                            (bracket_expression
                              (expression
                                (expression
                                  (primitive_expression
                                    (primitive_constant
                                      (decimal_))))
                                (PLUS)
                                (expression
                                  (primitive_expression
                                    (primitive_constant
                                      (decimal_))))))))))))))))))))

==================
Bracket Expression Subquery
==================

SELECT (SELECT foo FROM bar)

---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (bracket_expression
                          (subquery
                            (select_statement
                              (query_expression
                                (query_specification
                                  (select)
                                  (select_list
                                    (select_list_elem
                                      (expression_elem
                                        (expression
                                          (full_column_name
                                            (id_))))))
                                  (table_sources
                                    (table_source
                                      (table_source_item
                                        (full_table_name
                                          (id_))))))))))))))))))))))
